RD-2008-10-27-0: Enhancem.:  - Added test for IZ 2762
                             - switched worker.sh to sleeper.sh in enforce_limits test
                 Review:     CR

GH-2008-10-24-0: Enhancem.:  Added test for IZ 2714 
                 Review:     CR, AP

JG-2008-10-24-0: Enhancem.:  Use new filesystem config for file_procedures
                             (delete_directory), delete temp files on the 
                             fileserver, more to come ...
                 Review:     MD

CR-2008-10-23-0: Enhancem.:  o Added test for IZ 2747
                             o Fixed problem in is_daemon_running procedure
                             o Added some additional loggings
                             o Added some additional "info exists" calls and
                               logging if expected arrays are not existing
                             o Enhanced message output of test 2735
                 Review:     MD

AP-2008-10-23-0: Enhancem.:  o Added test for IZ 2626
                             o Added foreign_key_suffix parameter to database config
                             o Added check_dbwriter_log procedure
                 Review:     DG

JG-2008-10-22-0: Bugfix:     Fixed shadowd installation (error about missing
                             filesystem config)
                 Review:     DG

DG-2008-10-21-0: Cleanup:    Old tcl code produced output error since qconf -scl is 
                             not a valid command. 
                 Review:     JG

TB-2008-10-21-1: Bugfix:     o Fixed Hedeby test basic_resource_assignment:
                               Fixed qacct related partial test
                             o Fixed Hedeby test unassign_resources
                               Fixed problem with time differences between hosts
                 Review:     AF

TB-2008-10-21-0: Bugfix:     Fixed Hedeby test for Issue 571:
                             Wrong timeout calculation for event detection